# Anisette.py

./: README.md  pyproject.toml  shell.nix
.github/workflows/: docs.yml  pre-commit.yml  test.yml
anisette/: __init__.py  _adi.py  _allocator.py  _anisette.py  _device.py  _fs.py  _hooks.py  _library.py  _session.py  _util.py  _vm.py
dlserver/src/: index.ts
scripts/: supported_py_versions.py
src/anisette/: _ani_provider.py  _fs.py  _library.py  _util.py  _vm.py  anisette.py  cli.py
tests/: test_basic.py
